Fix mp4 overflow issue
Fixes #1416

--- a/src/sass/tweet/media.scss
+++ b/src/sass/tweet/media.scss
@@ -90,7 +90,10 @@
   max-height: unset;
 }
 
-.media-gif video {
+.media-gif video,
+.media-gif img {
+  width: 100%;
+  height: 100%;
   max-height: 530px;
   background-color: #101010;
 }
